--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           </div>
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle">
-          <a href="https://doubiiu.github.io/projects/Make-Your-Video/">
+          <a href="https://follow-your-click.github.io/">
             <span class="papertitle">Follow-Your-Click: Open-domain Regional Image Animation via Short Prompts  </span>
           </a>
           <br>
@@ -127,7 +127,7 @@
           </div>
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle">
-          <a href="https://doubiiu.github.io/projects/Make-Your-Video/">
+          <a href="https://yzxing87.github.io/Seeing-and-Hearing/">
             <span class="papertitle">Seeing and Hearing: Open-domain Visual-Audio Generation with Diffusion Latent Aligners</span>
           </a>
           <br>
@@ -157,11 +157,11 @@
           </div>
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle">
-          <a href="https://doubiiu.github.io/projects/Make-Your-Video/">
+          <a href="https://guolanqing.github.io/Self-Cascade/">
             <span class="papertitle">Make a Cheap Scaling: A Self-Cascade Diffusion Model for Higher-Resolution Adaptation</span>
           </a>
           <br>
-          <a href="https://mayuelala.github.io/" >Lanqing Guo</a><sup>*</sup>,
+          <a href="https://scholar.google.com/citations?user=8rkIFHcAAAAJ&hl=zh-CN" >Lanqing Guo</a><sup>*</sup>,
           <strong>Yingqing He</strong><sup>*</sup>,
           <a href="#" target="_blank">Haoxin Chen</a>,
           <a href="https://menghanxia.github.io/" target="_blank">Menghan Xia</a>,
@@ -196,7 +196,7 @@
           </div>
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle">
-          <a href="https://doubiiu.github.io/projects/Make-Your-Video/">
+          <a href="https://magic-stick-edit.github.io/">
             <span class="papertitle">MagicStick: Controllable Video Editing via Control Handle Transformations</span>
           </a>
           <br>
@@ -270,7 +270,7 @@
           <br>
           <em>ICLR</em>, 2024 &nbsp <font color="red"><strong>(Spotlight)</strong></font>
           <br>
-          <a href="https://bmild.github.io/rawnerf/index.html">project page</a> / 
+          <a href="https://bmild.github.io/rawnerf/index.html">Project page</a> / 
           <a href="https://arxiv.org/abs/2310.07702">arXiv</a> / 
           <a href="https://github.com/YingqingHe/ScaleCrafter">code</a>
           <p></p>
@@ -291,7 +291,7 @@
           </div>
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle">
-          <a href="https://doubiiu.github.io/projects/Make-Your-Video/">
+          <a href="http://haonanqiu.com/projects/FreeNoise.html">
             <span class="papertitle">Freenoise: Tuning-free longer video diffusion via noise rescheduling</span>
           </a>
           <br>
@@ -326,7 +326,7 @@
           </div>
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle">
-          <a href="https://doubiiu.github.io/projects/Make-Your-Video/">
+          <a href="https://follow-your-pose.github.io/">
             <span class="papertitle">Follow your pose: Pose-guided text-to-video generation using pose-free videos</span>
           </a>
           <br>
@@ -410,7 +410,7 @@
           </div>
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle">
-          <a href="https://doubiiu.github.io/projects/Make-Your-Video/">
+          <a href="https://ailab-cvc.github.io/TaleCrafter/">
             <span class="papertitle">TaleCrafter: Interactive Story Visualization with Multiple Characters</span>
           </a>
           <br>
@@ -459,7 +459,7 @@
           </script>
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle">
-          <a href="https://doubiiu.github.io/projects/Make-Your-Video/">
+          <a href="https://ailab-cvc.github.io/videocrafter/">
             <span class="papertitle">Videocrafter1: Open diffusion models for high-quality video generation</span>
           </a>
           <br>
@@ -528,7 +528,7 @@
           <br>
           <em>arXiv</em>, 2023 &nbsp 
           <br>
-          <a href="http://jonbarron.info/zipnerf">Project page</a> / 
+          <a href="https://ailab-cvc.github.io/Animate-A-Story/">Project page</a> / 
           <a href="https://arxiv.org/abs/2307.06940">arXiv</a> / 
           <a href="https://github.com/VideoCrafter/Animate-A-Story">Github</a>
           <p></p>
@@ -550,7 +550,7 @@
           </div>
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle">
-          <a href="https://doubiiu.github.io/projects/Make-Your-Video/">
+          <a href="https://yingqinghe.github.io/LVDM/">
             <span class="papertitle">Latent Video Diffusion Models for High-Fidelity Long Video Generation</span>
           </a>
           <br>
@@ -584,7 +584,7 @@
           </div>
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle">
-          <a href="https://doubiiu.github.io/projects/Make-Your-Video/">
+          <a href="https://yingqinghe.github.io/interclassgan/">
             <span class="papertitle">Interpreting class conditional GANs with channel awareness</span>
           </a>
           <br>
@@ -616,7 +616,7 @@
           </div>
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle">
-          <a href="https://doubiiu.github.io/projects/Make-Your-Video/">
+          <a href="https://github.com/YingqingHe/Shadow-Removal-via-Generative-Priors">
             <span class="papertitle">Unsupervised portrait shadow removal via generative priors</span>
           </a>
           <br>
