--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
           <br>
           <a href="https://yzxing87.github.io/" >Yazhou Xing</a><sup>*</sup>,
           <strong>Yingqing He</strong><sup>*</sup>,
-          <a href="#" target="_blank">Zeyue Tian</a>,
+          <!-- <a href="#" target="_blank">Zeyue Tian</a>, -->
+          <font style="color: #1772d0;">Zeyue Tian, </font> &nbsp;
           <a href="https://xinntao.github.io/" target="_blank">Xintao Wang</a>,
           <a href="https://cqf.io/" target="_blank">Qifeng Chen</a>,
           <br>
@@ -163,11 +164,11 @@
           <br>
           <a href="https://scholar.google.com/citations?user=8rkIFHcAAAAJ&hl=zh-CN" >Lanqing Guo</a><sup>*</sup>,
           <strong>Yingqing He</strong><sup>*</sup>,
-          <a href="#" target="_blank">Haoxin Chen</a>,
+          <a href="https://scholar.google.com/citations?user=6UPJSvwAAAAJ&hl=zh-CN" target="_blank">Haoxin Chen</a>,
           <a href="https://menghanxia.github.io/" target="_blank">Menghan Xia</a>,
           <a href="http://vinthony.github.io/" target="_blank">Xiaodong Cun</a>,
           <a href="https://wyf0912.github.io/" target="_blank">Yufei Wang</a>,
-          <a href="" target="_blank">Siyu Huang</a>,
+          <font style="color: #1772d0;">Siyu Huang, </font> &nbsp;
           <a href="https://yzhang2016.github.io" target="_blank">Yong Zhang</a>,
           <a href="https://xinntao.github.io/" target="_blank">Xintao Wang</a>,
           <a href="https://cqf.io/" target="_blank">Qifeng Chen</a>,
@@ -206,7 +207,7 @@
           <a href="https://chenyangqiqi.github.io/">Chenyang Qi</a>, 
           <a href="https://xinntao.github.io/" target="_blank">Xintao Wang</a>,
           <a href="https://scholar.google.com/citations?hl=en&user=4oXBp9UAAAAJ&view_op=list_works&sortby=pubdate">Ying Shan</a>, 
-          <a href="">Xiu Li</a>, 
+          <font style="color: #1772d0;">Xiu Li, </font> &nbsp;
           <a href="https://cqf.io/" target="_blank">Qifeng Chen</a>,
           <br>
           <em>arXiv</em>, 2023
@@ -258,13 +259,13 @@
           <a href="http://www.ricardomartinbrualla.com/">Ricardo Martin-Brualla</a>, <br>
           <a href="https://pratulsrinivasan.github.io/">Pratul Srinivasan</a>, -->
           <strong>Yingqing He</strong><sup>*</sup>,
-          <a href="" target="_blank">Shaoshu Yang</a><sup>*</sup>,
-          <a href="#" target="_blank">Haoxin Chen</a>,
+          <font style="color: #1772d0;">Shaoshu Yang, </font> &nbsp;
+          <font style="color: #1772d0;">Haoxin Chen, </font> &nbsp;
           <a href="http://vinthony.github.io/" target="_blank">Xiaodong Cun</a>,
           <a href="https://menghanxia.github.io/" target="_blank">Menghan Xia</a>,
           <a href="https://yzhang2016.github.io" target="_blank">Yong Zhang</a>,
           <a href="https://xinntao.github.io/" target="_blank">Xintao Wang</a>,
-          <a href="#" target="_blank">Ran He</a>,
+          <font style="color: #1772d0;">Ran He, </font> &nbsp;
           <a href="https://cqf.io/" target="_blank">Qifeng Chen</a>,
           <a href="https://scholar.google.com/citations?hl=zh-CN&user=4oXBp9UAAAAJ" target="_blank">Ying Shan</a>
           <br>
@@ -272,7 +273,7 @@
           <br>
           <a href="https://bmild.github.io/rawnerf/index.html">Project page</a> / 
           <a href="https://arxiv.org/abs/2310.07702">arXiv</a> / 
-          <a href="https://github.com/YingqingHe/ScaleCrafter">code</a>
+          <a href="https://github.com/YingqingHe/ScaleCrafter">Github</a>
           <p></p>
           <p>
             Generating 16x higher-resolution images and 4x higher-resolution videos without any extra data and training effort.
@@ -334,15 +335,16 @@
           <strong>Yingqing He</strong><sup>*</sup>,
           <a href="https://vinthony.github.io/academic/">Xiaodong Cun</a>, 
           <a href="https://xinntao.github.io/">Xintao Wang</a>, 
-          <a href="#">Siran Chen</a>, 
+          <font style="color: #1772d0;">Siran Chen, </font> &nbsp;
           <a href="https://scholar.google.com/citations?hl=en&user=4oXBp9UAAAAJ&view_op=list_works&sortby=pubdate">Ying Shan</a>, 
-          <a href="">Xiu Li</a>, 
+          <font style="color: #1772d0;">Xiu Li, </font> &nbsp;
           <a href="https://cqf.io/">Qifeng Chen</a>,
           <br>
           <em>AAAI</em>, 2024
           <br>
           <a href="https://follow-your-pose.github.io/">Project page</a> / 
           <a href="https://arxiv.org/abs/2304.01186">arXiv</a>
+          <a href="https://github.com/mayuelala/FollowYourPose">Github</a>
           <p></p>
           <p>
           </p>
@@ -377,12 +379,12 @@
           <br>
           <a href="https://doubiiu.github.io/" >Jinbo Xing</a>, 
           <a href="https://menghanxia.github.io/">Menghan Xia</a>, 
-          <a href="">Yuxin Liu</a>, 
+          <font style="color: #1772d0;">Yuxin Liu, </font> &nbsp;
           <a href="https://julianjuaner.github.io/">Yuechen Zhang</a>, 
           <a href="https://yzhang2016.github.io/">Yong Zhang</a>, 
           <strong>Yingqing He</strong>, 
           <a href="https://github.com/hyliu">Hanyuan Liu</a>, 
-          <a href="">Haoxin Chen</a>, 
+          <font style="color: #1772d0;">Haoxin Chen, </font> &nbsp;
           <a href="https://vinthony.github.io/academic/">Xiaodong Cun</a>, 
           <a href="https://xinntao.github.io/">Xintao Wang</a>, 
           <a href="https://scholar.google.com/citations?hl=en&user=4oXBp9UAAAAJ&view_op=list_works&sortby=pubdate">Ying Shan</a>, 
@@ -414,13 +416,13 @@
             <span class="papertitle">TaleCrafter: Interactive Story Visualization with Multiple Characters</span>
           </a>
           <br>
-          <a href="#" >Yuan Gong</a>,
-          <a href="#" >Youxi Pang</a>,
+          <font style="color: #1772d0;">Yuan Gong, </font> &nbsp;
+          <font style="color: #1772d0;">Youxi Pang, </font> &nbsp;
           <a href="https://vinthony.github.io/academic/">Xiaodong Cun</a>, 
           <a href="https://menghanxia.github.io/" target="_blank">Menghan Xia</a>,
           <strong>Yingqing He</strong>,
-          <a href="#" target="_blank">Haoxin Chen</a>,
-          <a href="#" >Longyue Wang</a>,
+          <font style="color: #1772d0;">Haoxin Chen, </font> &nbsp;
+          <font style="color: #1772d0;">Longyue Wang, </font> &nbsp;
           <a href="https://yzhang2016.github.io" target="_blank">Yong Zhang</a>,
           <a href="https://xinntao.github.io/">Xintao Wang</a>,
           <a href="https://scholar.google.com/citations?hl=en&user=4oXBp9UAAAAJ&view_op=list_works&sortby=pubdate">Ying Shan</a>, 
@@ -468,12 +470,12 @@
           <strong>Yingqing He</strong><sup>*</sup>,
           <a href="https://yzhang2016.github.io/">Yong Zhang</a>,
           <a href="https://vinthony.github.io/academic/">Xiaodong Cun</a>,
-          <a href="#">Shaoshu Yang</a>,
+          <font style="color: #1772d0;">Shaoshu Yang, </font> &nbsp;
           <a href="https://doubiiu.github.io/" >Jinbo Xing</a>, 
-          <a href="#">Yaofang Liu</a>,
+          <font style="color: #1772d0;">Yaofang Liu, </font> &nbsp;
           <a href="https://cqf.io/">Qifeng Chen</a>,
           <a href="https://xinntao.github.io/">Xintao Wang</a>,
-          <a href="#">Chao Weng</a>,
+          <font style="color: #1772d0;">Chao Weng, </font> &nbsp;
           <a href="https://scholar.google.com/citations?hl=en&user=4oXBp9UAAAAJ&view_op=list_works&sortby=pubdate">Ying Shan</a>
           <br>
           <em>arXiv</em>, 2023
@@ -515,14 +517,14 @@
           <br>
           <strong>Yingqing He</strong>,
           <a href="https://menghanxia.github.io/" target="_blank">Menghan Xia</a>,
-          <a href="#" target="_blank">Haoxin Chen</a>,
+          <font style="color: #1772d0;">Haoxin Chen, </font> &nbsp;
           <a href="http://vinthony.github.io/" target="_blank">Xiaodong Cun</a>,
-          <a href="" target="_blank">Yuan Gong</a>,
+          <font style="color: #1772d0;">Yuan Gong, </font> &nbsp;
           <a href="https://doubiiu.github.io/" target="_blank">Jinbo Xing</a>,
           <a href="https://yzhang2016.github.io" target="_blank">Yong Zhang</a>,
 
           <a href="https://xinntao.github.io/" target="_blank">Xintao Wang</a>,
-          <a href="#" target="_blank">Chao Weng</a>,
+          <font style="color: #1772d0;">Chao Weng, </font> &nbsp;
           <a href="https://scholar.google.com/citations?hl=zh-CN&user=4oXBp9UAAAAJ" target="_blank">Ying Shan</a>,
           <a href="https://cqf.io/" target="_blank">Qifeng Chen</a>
           <br>
@@ -589,9 +591,9 @@
           </a>
           <br>
           <strong>Yingqing He</strong>,
-          <a href="" target="_blank">Zhiyi Zhang</a>,
-          <a href="#" target="_blank">Jiapeng Zhu</a>,
-          <a href="#" target="_blank">Yujun Shen</a>,
+          <font style="color: #1772d0;">Zhiyi Zhang, </font> &nbsp;
+          <font style="color: #1772d0;">Jiapeng Zhu, </font> &nbsp;
+          <a href="https://shenyujun.github.io/" target="_blank">Yujun Shen</a>,
           <a href="https://cqf.io/" target="_blank">Qifeng Chen</a>,
           <br>
           <em>arXiv</em>, 2022
@@ -621,15 +623,16 @@
           </a>
           <br>
           <strong>Yingqing He</strong><sup>*</sup>,
-          <a href="" target="_blank">Yazhou Xing</a><sup>*</sup>,
-          <a href="#" target="_blank">Tianjia Zhang</a>,
+          <!-- <a href="" target="_blank">Yazhou Xing</a><sup>*</sup>, -->
+          <font style="color: #1772d0;">Yazhou Xing, </font> &nbsp;
+          <font style="color: #1772d0;">Tianjia Zhang, </font> &nbsp;
           <a href="https://cqf.io/" target="_blank">Qifeng Chen</a>,
           <br>
           <!-- <em>arXiv</em>, 2023 -->
           <em>ACM MM</em>, 2021 &nbsp <font color="red"><strong>(Oral)</strong></font>
           <br>
           <a href="https://arxiv.org/abs/2108.03466">arXiv</a> / 
-          <a href="https://github.com/YingqingHe/Shadow-Removal-via-Generative-Priors">code</a>
+          <a href="https://github.com/YingqingHe/Shadow-Removal-via-Generative-Priors">Github</a>
           <p></p>
           <p>we propose an unsupervised method for portrait shadow removal, leveraging the facial priors from <em>StyleGAN2</em>.
             Our approach also supports facial tattoo and watermark removal.
