--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
           <em>AAAI</em>, 2024
           <br>
           <a href="https://follow-your-pose.github.io/">Project page</a> / 
-          <a href="https://arxiv.org/abs/2304.01186">arXiv</a>
+          <a href="https://arxiv.org/abs/2304.01186">arXiv</a> / 
           <a href="https://github.com/mayuelala/FollowYourPose">Github</a>
           <p></p>
           <p>
@@ -393,7 +393,7 @@
           <!-- <em>arXiv</em>, 2023 -->
           <em>TVCG</em>, 2024
           <br>
-          <a href="https://doubiiu.github.io/projects/Make-Your-Video/">project page</a> / 
+          <a href="https://doubiiu.github.io/projects/Make-Your-Video/">Project page</a> / 
           <a href="https://arxiv.org/abs/2306.00943">arXiv</a>
           <p></p>
           <p>Given text description and video structure (depth), our approach can generate temporally coherent and high-fidelity videos. Its applications include dynamic 3d-scene-to-video creation, real-life scene to video, and video rerendering.
