--- a/index.html
+++ b/index.html
@@ -70,6 +70,29 @@
           </tbody></table>
           
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr>
+            <td style="padding:20px;width:100%;vertical-align:middle">
+              <h2>News</h2>
+              <p>
+                - [03/2024] Invited talk at <a href="https://www.meituan.com/">Meituan</a> on the topic of <i>"Recent Advance of Text-to-Video Generation"</i>.<br>
+                - [03/2024] 1 paper was accepted to <font style="color: #D8429E">CVPR 2024</font>.<br> 
+                - [02/2024] 1 paper was accepted to <font style="color: #D8429E">TVCG 2024</font>.<br> 
+                - [01/2024] 2 papers were accepted to <font style="color: #D8429E">ICLR 2024</font> (including 1 Spotlight paper).<br> 
+                - [12/2023] 1 paper was accepted to <font style="color: #D8429E">AAAI 2024</font>.<br> 
+                - [11/2023] Released <a href="https://arxiv.org/abs/2310.19512">VideoCrafter 1</a>.<br>
+                - [08/2023] 1 paper was accepted to <font style="color: #D8429E">SIGGRAPH Asia 2023</font>.<br> 
+                - [06/2023] Invited talk at <a href="https://sites.google.com/view/loveucvpr23/home">LOVEU Workshop</a> at <font style="color: #D8429E">CVPR 2023</font> on the topic of <i>"Crafting Your Videos: From Unconditional to <br>
+                  &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp;
+                  Controllable Video Diffusion Models"</i>.<br>
+                - [04/2023] Released <a href="https://github.com/AILab-CVC/VideoCrafter">VideoCrafter 0.9</a>.<br>
+                - [08/2021] 1 paper was accepted to <font style="color: #D8429E">ACM MM 2021</font> as an <font style="color: #D8429E">Oral</font> paper.<br> 
+              </p>
+            </td>
+            </tr>
+          </tbody></table>
+          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        
+          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
               <tr>
               <td style="padding:20px;width:100%;vertical-align:middle">
                 <h2>Publications</h2>
