--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
                   My main research focus is text-to-video generation, video diffusion models and related downstream applications.
                   I am also working at other AIGC-related research💖.
                 </p>
+                <p>
+                  Welcome to any types of research collaboration and discussions! 
+                  Our lab is hiring engineering-oriented research assistant (RA). If you would like to apply, feel free to reach out with your CV!
+                </p>
                 <p style="text-align:center">
                   <a href="yhebm@connect.ust.hk">Email</a> &nbsp;/&nbsp;
                   <a href="https://scholar.google.com/citations?user=UDiGYN8AAAAJ&hl=en">Google Scholar</a> &nbsp;/&nbsp;
