--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <h2>News</h2>
               <p>
+                - [05/2024] We released a survey paper: <a href="https://arxiv.org/abs/2405.19334">LLMs Meet Multimodal Generation and Editing: A Survey</a>.<br>
                 - [03/2024] Invited talk at <a href="https://www.meituan.com/">Meituan</a> on the topic of <i>"Recent Advance of Text-to-Video Generation"</i>.<br>
                 - [03/2024] 1 paper was accepted to <font style="color: #D8429E">CVPR 2024</font>.<br> 
                 - [02/2024] 1 paper was accepted to <font style="color: #D8429E">TVCG 2024</font>.<br> 
@@ -110,7 +111,43 @@
     </table>
     
     <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-          
+      <!-- survey -->
+      <tr>
+        <td style="padding:20px;width:25%;vertical-align:middle;">
+          <img src='myassets/survey.jpeg' width="100%" height="60%">
+        </td>
+        <td style="padding:20px;width:75%;vertical-align:middle;">
+          <a href="https://arxiv.org/abs/2405.19334">
+            <span class="papertitle">LLMs Meet Multimodal Generation and Editing: A Survey</span>
+          </a>
+          <br>
+          <strong>Yingqing He</strong>,
+          <a href="https://scholar.google.com/citations?user=btgwZosAAAAJ&hl=en">Zhaoyang Liu</a>, 
+          <a href="https://jingyechen.github.io/">Jingye Chen</a>, 
+          <a href="https://scholar.google.com/citations?user=dghq4MQAAAAJ&hl=en">Zeyue Tian</a>, 
+          <a href="https://scholar.google.com/citations?user=bLRjUzAAAAAJ&hl=en">Hongyu Liu</a>, 
+          <a href="https://scholar.google.com/citations?user=Vl1X_-sAAAAJ&hl=zh-CN">Xiaowei Chi</a>, 
+          <a href="#">Runtao Liu</a>, 
+          <a href="https://scholar.google.com/citations?user=btgwZosAAAAJ&hl=en">Ruibin Yuan</a>, 
+          <a href="https://yzxing87.github.io/">Yazhou Xing</a>, 
+          <a href="https://whai362.github.io/">Wenhai Wang</a>, 
+          <a href="https://jifengdai.org/">Jifeng Dai</a>, 
+          <a href="https://yzhang2016.github.io" target="_blank">Yong Zhang</a>,
+          <a href="http://wei-xue.com/">Wei Xue</a>, 
+          <a href="#">Qifeng Liu</a>, 
+          <a href="https://scholar.google.com/citations?user=-0q6cIYAAAAJ&hl=en">Yike Guo</a>, 
+          <a href="https://cqf.io/">Qifeng Chen</a>
+          <br>
+          <em>arXiv</em>, 2024
+          <br>
+          <a href="https://arxiv.org/abs/2405.19334">arXiv</a> / 
+          <a href="https://github.com/YingqingHe/Awesome-LLMs-meet-Multimodal-Generation">Github</a>
+          <p></p>
+          <p>
+          </p>
+        </td>
+      </tr>
+
       <!-- follow-your-emoji -->
       <tr>
         <td style="padding:20px;width:25%;vertical-align:middle;">
