--- a/index.html
+++ b/index.html
@@ -142,7 +142,11 @@
           <br>
           <a href="https://arxiv.org/abs/2405.19334">arXiv</a> / 
           <a href="https://github.com/YingqingHe/Awesome-LLMs-meet-Multimodal-Generation">Github</a>
-          <p></p>
+          <p>This survey includes works of <em>image, video, 3D, and audio</em> generation and editing. 
+            We emphasize the roles of LLMs on the generation and editing of these modalities.
+            We also includes works of multimodal agents and generative AI safety.
+
+          </p>
           <p>
           </p>
         </td>
