--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <h2>News</h2>
               <p>
+                - [07/2024] 1 paper was accepted to <font style="color: #D8429E">ECCV 2024</font>.<br> 
                 - [05/2024] We released a survey paper: <a href="https://arxiv.org/abs/2405.19334">LLMs Meet Multimodal Generation and Editing: A Survey</a>.<br>
                 - [03/2024] Invited talk at <a href="https://www.meituan.com/">Meituan</a> on the topic of <i>"Recent Advance of Text-to-Video Generation"</i>.<br>
                 - [03/2024] 1 paper was accepted to <font style="color: #D8429E">CVPR 2024</font>.<br> 
@@ -221,6 +222,41 @@
         </td>
       </tr>
 
+
+      <!-- cheapscaling -->
+      <tr>
+        <td style="padding:20px;width:25%;vertical-align:middle">
+          <img src='myassets/cheap.jpg' width="100%" height="60%">
+        </td>
+        <td style="padding:20px;width:75%;vertical-align:middle">
+          <a href="https://guolanqing.github.io/Self-Cascade/">
+            <span class="papertitle">Make a Cheap Scaling: A Self-Cascade Diffusion Model for Higher-Resolution Adaptation</span>
+          </a>
+          <br>
+          <a href="https://scholar.google.com/citations?user=8rkIFHcAAAAJ&hl=zh-CN" >Lanqing Guo</a><sup>*</sup>,
+          <strong>Yingqing He</strong><sup>*</sup>,
+          <a href="https://scholar.google.com/citations?user=6UPJSvwAAAAJ&hl=zh-CN" target="_blank">Haoxin Chen</a>,
+          <a href="https://menghanxia.github.io/" target="_blank">Menghan Xia</a>,
+          <a href="http://vinthony.github.io/" target="_blank">Xiaodong Cun</a>,
+          <a href="https://wyf0912.github.io/" target="_blank">Yufei Wang</a>,
+          <font style="color: #1772d0;">Siyu Huang, </font> &nbsp;
+          <a href="https://yzhang2016.github.io" target="_blank">Yong Zhang</a>,
+          <a href="https://xinntao.github.io/" target="_blank">Xintao Wang</a>,
+          <a href="https://cqf.io/" target="_blank">Qifeng Chen</a>,
+          <a href="https://scholar.google.com/citations?hl=en&user=4oXBp9UAAAAJ&view_op=list_works&sortby=pubdate">Ying Shan</a>, 
+          <a href="https://personal.ntu.edu.sg/bihan.wen/" target="_blank">Binhan Wen</a>
+          <br>
+          <em>ECCV</em>, 2024
+          <br>
+          <a href="https://guolanqing.github.io/Self-Cascade/">Project page</a> / 
+          <a href="https://arxiv.org/abs/2402.10491">arXiv</a> / 
+          <a href="https://github.com/GuoLanqing/Self-Cascade/">Github</a>
+          <p></p>
+          <p>
+          </p>
+        </td>
+      </tr>
+
       <!-- seeing-and-hearing -->
       <tr>
         <td style="padding:20px;width:25%;vertical-align:middle">
@@ -249,73 +285,7 @@
         </td>
       </tr>
 
-      <!-- cheapscaling -->
-      <tr>
-        <td style="padding:20px;width:25%;vertical-align:middle">
-          <img src='myassets/cheap.jpg' width="100%" height="60%">
-        </td>
-        <td style="padding:20px;width:75%;vertical-align:middle">
-          <a href="https://guolanqing.github.io/Self-Cascade/">
-            <span class="papertitle">Make a Cheap Scaling: A Self-Cascade Diffusion Model for Higher-Resolution Adaptation</span>
-          </a>
-          <br>
-          <a href="https://scholar.google.com/citations?user=8rkIFHcAAAAJ&hl=zh-CN" >Lanqing Guo</a><sup>*</sup>,
-          <strong>Yingqing He</strong><sup>*</sup>,
-          <a href="https://scholar.google.com/citations?user=6UPJSvwAAAAJ&hl=zh-CN" target="_blank">Haoxin Chen</a>,
-          <a href="https://menghanxia.github.io/" target="_blank">Menghan Xia</a>,
-          <a href="http://vinthony.github.io/" target="_blank">Xiaodong Cun</a>,
-          <a href="https://wyf0912.github.io/" target="_blank">Yufei Wang</a>,
-          <font style="color: #1772d0;">Siyu Huang, </font> &nbsp;
-          <a href="https://yzhang2016.github.io" target="_blank">Yong Zhang</a>,
-          <a href="https://xinntao.github.io/" target="_blank">Xintao Wang</a>,
-          <a href="https://cqf.io/" target="_blank">Qifeng Chen</a>,
-          <a href="https://scholar.google.com/citations?hl=en&user=4oXBp9UAAAAJ&view_op=list_works&sortby=pubdate">Ying Shan</a>, 
-          <a href="https://personal.ntu.edu.sg/bihan.wen/" target="_blank">Binhan Wen</a>
-          <br>
-          <em>arXiv</em>, 2024
-          <br>
-          <a href="https://guolanqing.github.io/Self-Cascade/">Project page</a> / 
-          <a href="https://arxiv.org/abs/2402.10491">arXiv</a> / 
-          <a href="https://github.com/GuoLanqing/Self-Cascade/">Github</a>
-          <p></p>
-          <p>
-          </p>
-        </td>
-      </tr>
-
-      <!-- MagicStick -->
-      <tr>
-        <td style="padding:20px;width:25%;vertical-align:middle">
-          <video  width=100% height=100% muted autoplay loop>
-            <source src="myassets/magicstick.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-          </video>
-        </td>
-        <td style="padding:20px;width:75%;vertical-align:middle">
-          <a href="https://magic-stick-edit.github.io/">
-            <span class="papertitle">MagicStick: Controllable Video Editing via Control Handle Transformations</span>
-          </a>
-          <br>
-          <a href="https://mayuelala.github.io/" >Yue Ma</a>,
-          <a href="http://vinthony.github.io/" target="_blank">Xiaodong Cun</a>,
-          <strong>Yingqing He</strong>,
-          <a href="https://chenyangqiqi.github.io/">Chenyang Qi</a>, 
-          <a href="https://xinntao.github.io/" target="_blank">Xintao Wang</a>,
-          <a href="https://scholar.google.com/citations?hl=en&user=4oXBp9UAAAAJ&view_op=list_works&sortby=pubdate">Ying Shan</a>, 
-          <font style="color: #1772d0;">Xiu Li, </font> &nbsp;
-          <a href="https://cqf.io/" target="_blank">Qifeng Chen</a>
-          <br>
-          <em>arXiv</em>, 2023
-          <br>
-          <a href="https://magic-stick-edit.github.io/">Project page</a> / 
-          <a href="https://arxiv.org/abs/2312.03047">arXiv</a> / 
-          <a href="https://github.com/mayuelala/MagicStick">Github</a>
-          <p></p>
-          <p>
-          </p>
-        </td>
-      </tr>
-
+      
 
       <tr bgcolor="#ffffd0">
         <td style="padding:20px;width:25%;vertical-align:middle">
@@ -355,6 +325,39 @@
           </p>
         </td>
       </tr> 
+      
+      <!-- MagicStick -->
+      <tr>
+        <td style="padding:20px;width:25%;vertical-align:middle">
+          <video  width=100% height=100% muted autoplay loop>
+            <source src="myassets/magicstick.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </td>
+        <td style="padding:20px;width:75%;vertical-align:middle">
+          <a href="https://magic-stick-edit.github.io/">
+            <span class="papertitle">MagicStick: Controllable Video Editing via Control Handle Transformations</span>
+          </a>
+          <br>
+          <a href="https://mayuelala.github.io/" >Yue Ma</a>,
+          <a href="http://vinthony.github.io/" target="_blank">Xiaodong Cun</a>,
+          <strong>Yingqing He</strong>,
+          <a href="https://chenyangqiqi.github.io/">Chenyang Qi</a>, 
+          <a href="https://xinntao.github.io/" target="_blank">Xintao Wang</a>,
+          <a href="https://scholar.google.com/citations?hl=en&user=4oXBp9UAAAAJ&view_op=list_works&sortby=pubdate">Ying Shan</a>, 
+          <font style="color: #1772d0;">Xiu Li, </font> &nbsp;
+          <a href="https://cqf.io/" target="_blank">Qifeng Chen</a>
+          <br>
+          <em>arXiv</em>, 2023
+          <br>
+          <a href="https://magic-stick-edit.github.io/">Project page</a> / 
+          <a href="https://arxiv.org/abs/2312.03047">arXiv</a> / 
+          <a href="https://github.com/mayuelala/MagicStick">Github</a>
+          <p></p>
+          <p>
+          </p>
+        </td>
+      </tr>
 
       <!-- Freenoise -->
       <tr>
