--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <h2>News</h2>
               <p>
+                - [07/2024] 1 paper was accepted to <font style="color: #D8429E">SIGGRAPH Asia 2024</font>.<br> 
                 - [07/2024] 1 paper was accepted to <font style="color: #D8429E">ECCV 2024</font>.<br> 
                 - [05/2024] We released a survey paper: <a href="https://arxiv.org/abs/2405.19334">LLMs Meet Multimodal Generation and Editing: A Survey</a>.<br>
                 - [03/2024] Invited talk at <a href="https://www.meituan.com/">Meituan</a> on the topic of <i>"Recent Advance of Text-to-Video Generation"</i>.<br>
@@ -153,42 +154,7 @@
         </td>
       </tr>
 
-      <!-- follow-your-emoji -->
-      <tr>
-        <td style="padding:20px;width:25%;vertical-align:middle;">
-          <video  width=100% height=100% muted autoplay loop>
-            <source src="myassets/fye.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-          </video>
-        </td>
-        <td style="padding:20px;width:75%;vertical-align:middle;">
-          <a href="https://follow-your-click.github.io/">
-            <span class="papertitle">Follow-Your-Emoji: Fine-Controllable and Expressive Freestyle Portrait Animation</span>
-          </a>
-          <br>
-          <a href="https://mayuelala.github.io/">Yue Ma</a>,
-          <a href="#">Hongyu Liu</a>, 
-          <a href="#">Hongfa Wang</a>, 
-          <a href="#">Heng Pan</a>, 
-          <strong>Yingqing He</strong>,
-          <a href="#">Heng Pan</a>, 
-          <a href="#">Junkun Yuan</a>, 
-          <a href="#">Ailing Zeng</a>, 
-          <a href="#">Chengfei Cai</a>, 
-          <a href="https://scholar.google.com.hk/citations?user=9akH-n8AAAAJ&hl=en">Heung-Yeung Shum</a>, 
-          <a href="https://scholar.google.com/citations?user=AjxoEpIAAAAJ&hl=zh-CN">Wei Liu</a>, 
-          <a href="https://cqf.io/">Qifeng Chen</a>
-          <br>
-          <em>arXiv</em>, 2024
-          <br>
-          <a href="https://follow-your-emoji.github.io/">Project page</a> / 
-          <a href="https://arxiv.org/abs/2406.01900">arXiv</a>
-          <p></p>
-          <p>
-          </p>
-        </td>
-      </tr>
-
+      
       <!-- follow-your-click -->
       <tr>
         <td style="padding:20px;width:25%;vertical-align:middle">
@@ -223,6 +189,44 @@
       </tr>
 
 
+
+      <!-- follow-your-emoji -->
+      <tr>
+        <td style="padding:20px;width:25%;vertical-align:middle;">
+          <video  width=100% height=100% muted autoplay loop>
+            <source src="myassets/fye.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </td>
+        <td style="padding:20px;width:75%;vertical-align:middle;">
+          <a href="https://follow-your-click.github.io/">
+            <span class="papertitle">Follow-Your-Emoji: Fine-Controllable and Expressive Freestyle Portrait Animation</span>
+          </a>
+          <br>
+          <a href="https://mayuelala.github.io/">Yue Ma</a>,
+          <a href="#">Hongyu Liu</a>, 
+          <a href="#">Hongfa Wang</a>, 
+          <a href="#">Heng Pan</a>, 
+          <strong>Yingqing He</strong>,
+          <a href="#">Heng Pan</a>, 
+          <a href="#">Junkun Yuan</a>, 
+          <a href="#">Ailing Zeng</a>, 
+          <a href="#">Chengfei Cai</a>, 
+          <a href="https://scholar.google.com.hk/citations?user=9akH-n8AAAAJ&hl=en">Heung-Yeung Shum</a>, 
+          <a href="https://scholar.google.com/citations?user=AjxoEpIAAAAJ&hl=zh-CN">Wei Liu</a>, 
+          <a href="https://cqf.io/">Qifeng Chen</a>
+          <br>
+          <em>SIGGRAPH Asia</em>, 2024
+          <br>
+          <a href="https://follow-your-emoji.github.io/">Project page</a> / 
+          <a href="https://arxiv.org/abs/2406.01900">arXiv</a>
+          <p></p>
+          <p>
+          </p>
+        </td>
+      </tr>
+
+      
       <!-- cheapscaling -->
       <tr>
         <td style="padding:20px;width:25%;vertical-align:middle">
