--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
           <a href="https://scholar.google.com/citations?hl=zh-CN&user=4oXBp9UAAAAJ" target="_blank">Ying Shan</a>,
           <a href="https://cqf.io/" target="_blank">Qifeng Chen</a>
           <br>
-          <em>arXiv</em>, 2023 &nbsp 
+          <em>ECCV AI4VA Workshop</em>, 2024 &nbsp 
           <br>
           <a href="https://ailab-cvc.github.io/Animate-A-Story/">Project page</a> / 
           <a href="https://arxiv.org/abs/2307.06940">arXiv</a> / 
