--- a/index.html
+++ b/index.html
@@ -226,6 +226,44 @@
         </td>
       </tr>
 
+      <!-- Animate-a-story -->
+      <tr >
+        <td style="padding:20px;width:25%;vertical-align:middle">
+          <video  width=100% height=100% muted autoplay loop>
+            <source src="myassets/teddybear.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+            </video>
+        </td>
+        <td style="padding:20px;width:75%;vertical-align:middle">
+          <a href="https://videocrafter.github.io/Animate-A-Story/">
+            <span class="papertitle">Animate-A-Story: Storytelling with Retrieval-Augmented Video Generation</span>
+          </a>
+          <br>
+          <strong>Yingqing He</strong>,
+          <a href="https://menghanxia.github.io/" target="_blank">Menghan Xia</a>,
+          <font style="color: #1772d0;">Haoxin Chen, </font> &nbsp;
+          <a href="http://vinthony.github.io/" target="_blank">Xiaodong Cun</a>,
+          <font style="color: #1772d0;">Yuan Gong, </font> &nbsp;
+          <a href="https://doubiiu.github.io/" target="_blank">Jinbo Xing</a>,
+          <a href="https://yzhang2016.github.io" target="_blank">Yong Zhang</a>,
+
+          <a href="https://xinntao.github.io/" target="_blank">Xintao Wang</a>,
+          <font style="color: #1772d0;">Chao Weng, </font> &nbsp;
+          <a href="https://scholar.google.com/citations?hl=zh-CN&user=4oXBp9UAAAAJ" target="_blank">Ying Shan</a>,
+          <a href="https://cqf.io/" target="_blank">Qifeng Chen</a>
+          <br>
+          <em>ECCV AI4VA Workshop</em>, 2024 &nbsp 
+          <br>
+          <a href="https://ailab-cvc.github.io/Animate-A-Story/">Project page</a> / 
+          <a href="https://arxiv.org/abs/2307.06940">arXiv</a> / 
+          <a href="https://github.com/VideoCrafter/Animate-A-Story">Github</a>
+          <p></p>
+          <p>
+          A novel story-to-video pipeline with both structure and character controls, facilitating the generation of a vlog for a teddy bear.
+          </p>
+        </td>
+      </tr>
+
       
       <!-- cheapscaling -->
       <tr>
