--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             </video>
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle">
-          <a href="https://videocrafter.github.io/Animate-A-Story/">
+          <a href="https://ailab-cvc.github.io/Animate-A-Story/">
             <span class="papertitle">Animate-A-Story: Storytelling with Retrieval-Augmented Video Generation</span>
           </a>
           <br>
@@ -256,7 +256,7 @@
           <br>
           <a href="https://ailab-cvc.github.io/Animate-A-Story/">Project page</a> / 
           <a href="https://arxiv.org/abs/2307.06940">arXiv</a> / 
-          <a href="https://github.com/VideoCrafter/Animate-A-Story">Github</a>
+          <a href="https://github.com/AILab-CVC/Animate-A-Story">Github</a>
           <p></p>
           <p>
           A novel story-to-video pipeline with both structure and character controls, facilitating the generation of a vlog for a teddy bear.
